--- a/Cookies/index.html
+++ b/Cookies/index.html
@@ -17,7 +17,7 @@
             <button data-cook="affiche" class="btn2">Afficher</button>
         </div>
 
-        <p class="info-txt"></p>
+        <p class="info_txt"></p>
         <ul class="affichage"></ul>
 
 
