--- a/5. ToDoJS/index.html
+++ b/5. ToDoJS/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Mon Todo Liste</h1>
+
+    <form action="">
+        <label for="">Entrez une action</label>
+        <input type="text" id="item" placeholder="Entrez une Tache">
+        <button type="submit">Enregistrer une Tache</button>
+
+    </form>
+
+    <ul class="liste-todo">
+
+
+        
+    </ul>
 
     <script src="app.js"></script>
 </body>
