ecriture hml et css

--- a/Promodoro/index.html
+++ b/Promodoro/index.html
@@ -8,6 +8,26 @@
 </head>
 <body>
 
+    <h1>Mon Pomodoro</h1>
+
+    <div class="affichage">
+        <div class="bloc-travail">
+            <p>Travail</p>
+            <p class="affichageT">Temps</p>
+        </div>
+
+        <div class="bloc-repos">
+            <p>Repos</p>
+            <p class="affichageP"></p>
+
+        </div>
+    </div>
+
+    <div class="containers-btns">
+        <button class="btn1">Commencer</button>
+        <button class="btn2">Pause</button>
+        <button  class="btn3">Reset</button>
+    </div>
       <script src="app.js"></script>
 </body>
 </html>
