--- a/Promodoro/index.html
+++ b/Promodoro/index.html
@@ -11,12 +11,12 @@
     <h1>Mon Pomodoro</h1>
 
     <div class="affichage">
-        <div class="bloc-travail">
+        <div class="bloc travail">
             <p>Travail</p>
-            <p class="affichageT">Temps</p>
+            <p class="affichageT"></p>
         </div>
 
-        <div class="bloc-repos">
+        <div class="bloc repos">
             <p>Repos</p>
             <p class="affichageP"></p>
 
@@ -24,9 +24,9 @@
     </div>
 
     <div class="containers-btns">
-        <button class="btn1">Commencer</button>
-        <button class="btn2">Pause</button>
-        <button  class="btn3">Reset</button>
+        <button class="btn 1">Commencer</button>
+        <button class="btn 2">Pause</button>
+        <button  class="btn 3">Reset</button>
     </div>
       <script src="app.js"></script>
 </body>
